[package]
name = "advent_of_code_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Day 1
[[bin]]
name = "d01p01"
path = "src/d01/p01.rs"

[[bin]]
name = "d01p02"
path = "src/d01/p02.rs"

# Day 2
[[bin]]
name = "d02p01"
path = "src/d02/p01.rs"

[[bin]]
name = "d02p02"
path = "src/d02/p02.rs"

# Day 3
[[bin]]
name = "d03p01"
path = "src/d03/p01.rs"

[[bin]]
name = "d03p02"
path = "src/d03/p02.rs"